# libAutoUpdater

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  README.zh-CN.md  SECURITY.md  conanfile.py  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
cmake/: libAutoUpdaterConfig.cmake.in
docs/: api.md  apply-plan.example.json  architecture-plan.md  content-addressed-storage.md  ecosystem.md  getting-started.md  index.example.json  integration.md  manifest.example.json  quality.md  release-process.md  security-model.md  server-layout.md  troubleshooting.md
examples/: github_update_demo.py  github_update_demo_zh.py
examples/cli/: CMakeLists.txt  main.cpp
examples/qt/: CMakeLists.txt  QtDispatcher.cpp  QtDispatcher.h  QtNetworkClient.cpp  QtNetworkClient.h  main.cpp
examples/update-server/: README.md
examples/update-server/releases/2.0.0/: manifest.json
examples/update-server/releases/2.0.0/config/: settings.json
examples/update-server/releases/2.0.0/resources/: feature.txt
include/libAutoUpdater/: ApplyPlan.h  Config.h  Error.h  Manifest.h  Result.h  Types.h  Updater.h  Version.h
include/libAutoUpdater/interfaces/: IEventDispatcher.h  IFileSystem.h  IHashProvider.h  INetworkClient.h  IProcessLauncher.h  ISignatureVerifier.h  IStateStore.h
packaging/homebrew/: libautoupdater.rb
packaging/vcpkg/: README.md  portfile.cmake  vcpkg.json
src/: ApplyLauncher.cpp  ApplyLauncher.h  ApplyPlan.cpp  ApplyPlanWriter.cpp  ApplyPlanWriter.h  DownloadExecutor.cpp  DownloadExecutor.h  Error.cpp  LocalSnapshotBuilder.cpp  LocalSnapshotBuilder.h  Manifest.cpp  ManifestFetcher.cpp  ManifestFetcher.h  ManifestVerifier.cpp  UpdatePlanner.cpp  UpdatePlanner.h  UpdateTypes.h  Updater.cpp  Version.cpp
src/default/: BasicNetworkClient.cpp  CfNetworkClient.cpp  CurlNetworkClient.cpp  DirectDispatcher.cpp  JsonStateStore.cpp  NullSignatureVerifier.cpp  OpenSslSignatureVerifier.cpp  ProcessLauncher.cpp  Sha256HashProvider.cpp  StdFileSystem.cpp  WinHttpNetworkClient.cpp
src/util/: Json.cpp  Json.h  PathUtil.cpp  PathUtil.h  Sha256.cpp  Sha256.h  UrlUtil.cpp  UrlUtil.h
tests/: ApplyExecutorTests.cpp  ApplyLauncherTests.cpp  ApplyPlanTests.cpp  CMakeLists.txt  FuzzSmokeTests.cpp  HashTests.cpp  ManifestFetcherTests.cpp  ManifestTests.cpp  SignatureVerifierTests.cpp  StateStoreTests.cpp  TestCommon.h  UpdatePlannerTests.cpp  UpdaterTests.cpp  VersionTests.cpp  e2e_flow.py  main.cpp
tests/consumer/: CMakeLists.txt  main.cpp
tools/: check_release_ready.py  extract_changelog.py  gc_objects.py  make_index.py  make_manifest.py  make_sbom.py  sign_manifest.py
updater/: ApplyExecutor.cpp  ApplyExecutor.h  CMakeLists.txt  main.cpp
